--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,25 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: wrap;  
   } 
-.sort-container > h2 {
-  width: calc(100% / 3);
+
+@media screen and (max-width: 520px) {
+  /* change root font-size */
+  html {
+    font-size: 12.5px;
+  }
+  .sort-container > h2 {
+    width: calc(100% / 1);
+    font-size: 1rem;
+  }
 }
 
-.sort-container > h2:nth-child(1) {
-  width: 100%;
-} 
+@media screen and (min-width: 768px) {
+  .sort-container > h2 {
+    width: calc(100% / 3);
+  }
+  .sort-container > h2:first-child {
+    width: 100%;
+  }
+}
